2004-12-12  Kelley Cook  <kcook@gcc.gnu.org>

	* bin/autoheader.in: Exit if no AC_CONFIG_HEADERS was found.
	(trivial change)

2004-12-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/autoconf.texi (Limitations of Usual Tools) <expr (:)>: Typo.

2004-12-11  Noah Misch  <noah@cs.caltech.edu>

	* lib/autotest/general.m4 (_AT_CHECK) [--trace]: Rework a shell pattern
	to avoid using a negated character class.  Reported by Nicolas Joly.
	* tests/local.at (AT_CHECK_SHELL_SYNTAX): Check for similar constructs.

2004-12-10  Paul Eggert  <eggert@cs.ucla.edu>

	* man/Makefile.am (autoconf.1, autoheader.1, autom4te.1, autoreconf.1,
	autoscan.1, autoupdate.1, ifnames.1, config.guess.1, config.sub.1):
	Don't depend on .x file explicitly, since "make" does that for us.
	Suggested by Stepan Kasal.

	* bin/Makefile.am (MOSTLYCLEANFILES): Renamed from CLEANFILES.
	Add *.tmp.
	(autoconf, autoheader, autom4te, autoreconf, autoscan, autoupdate,
	ifnames): Factor common code.  And they said it couldn't be done!

2004-12-09  Paul Eggert  <eggert@cs.ucla.edu>

	* bin/.cvsignore: Add autoconf.in.
	* tests/.cvsignore: Add wrapper.in.
	* lib/autotest/general.m4: Escape '$' in case pattern.

2004-12-09  Noah Misch  <noah@cs.caltech.edu>

	* man/Makefile.am (autoconf.1): Regenerate when `autoconf.as' changes.

	* lib/autotest/general.m4 [--trace] (AT_INIT): Do not `set -v'.

	* tests/autotest.at: New file.
	* tests/suite.at: Include it.
	* tests/Makefile.am: Distribute it.

	* lib/autotest/general.m4 [--trace] (_AT_CHECK): Do not enable
	  shell tracing on a command that could contain multiple lines.
	* doc/autoconf.text: Document that fact and its implications.
	* lib/m4sugar/m4sh.m4 (AS_ESCAPE_FOR_EXPAND): New macro.
	* tests/autotest.at (Multiline backquote command substitution,
	  Multiline parameter expansion, Literal multiline command,
	  Multiline parenthetical command substitution): Remove XFAIL.

2004-12-09  Paul Eggert  <eggert@cs.ucla.edu>
